# irodori-extension-s3-tables

./: Cargo.toml  README.md  connector.config.json  connector.source.json  irodori.extension.json
native/source/: README.md
src/: driver.rs  lib.rs
